--- a/ui/GuessDia.ui
+++ b/ui/GuessDia.ui
@@ -16,6 +16,12 @@
     <height>340</height>
    </size>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>202</width>
+    <height>350</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Guess beads</string>
   </property>
@@ -48,7 +54,7 @@
   <widget class="QTextEdit" name="data">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>20</x>
      <y>10</y>
      <width>151</width>
      <height>271</height>
