--- a/ui/GuessDia.ui
+++ b/ui/GuessDia.ui
@@ -28,11 +28,14 @@
   <widget class="QPushButton" name="ok">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>20</x>
      <y>290</y>
-     <width>75</width>
+     <width>61</width>
      <height>23</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>OK</string>
@@ -43,9 +46,12 @@
     <rect>
      <x>90</x>
      <y>290</y>
-     <width>75</width>
+     <width>71</width>
      <height>23</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>reset</string>
@@ -56,9 +62,12 @@
     <rect>
      <x>20</x>
      <y>10</y>
-     <width>151</width>
+     <width>141</width>
      <height>271</height>
     </rect>
+   </property>
+   <property name="cursor" stdset="0">
+    <cursorShape>IBeamCursor</cursorShape>
    </property>
   </widget>
  </widget>
