--- a/ui/Results.ui
+++ b/ui/Results.ui
@@ -7,13 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>510</height>
+    <height>530</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>1000</width>
     <height>510</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1100</width>
+    <height>530</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -51,10 +57,10 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="exportRes">
    <property name="geometry">
     <rect>
-     <x>870</x>
+     <x>780</x>
      <y>470</y>
      <width>101</width>
      <height>31</height>
@@ -62,6 +68,25 @@
    </property>
    <property name="text">
     <string>Export data</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="exported">
+   <property name="geometry">
+    <rect>
+     <x>900</x>
+     <y>480</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Times New Roman</family>
+     <pointsize>11</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
