--- a/ui/main.ui
+++ b/ui/main.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>795</width>
+    <width>771</width>
     <height>755</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>771</width>
-    <height>684</height>
+    <height>600</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -48,7 +48,7 @@
      <height>701</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout_2" stretch="5,4">
+   <layout class="QVBoxLayout" name="verticalLayout_2" stretch="6,4">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="5,3">
       <property name="spacing">
@@ -82,7 +82,7 @@
             <property name="font">
              <font>
               <family>Times New Roman</family>
-              <pointsize>8</pointsize>
+              <pointsize>10</pointsize>
              </font>
             </property>
             <property name="cursor">
@@ -122,7 +122,7 @@
            </font>
           </property>
           <property name="title">
-           <string>Plot setting</string>
+           <string>   Plot setting</string>
           </property>
           <widget class="QWidget" name="gridLayoutWidget_2">
            <property name="geometry">
@@ -142,7 +142,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>10</pointsize>
                </font>
               </property>
               <property name="text">
@@ -155,7 +155,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>10</pointsize>
                </font>
               </property>
               <property name="text">
@@ -168,7 +168,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>10</pointsize>
                </font>
               </property>
               <property name="text">
@@ -181,7 +181,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>10</pointsize>
                </font>
               </property>
               <property name="text">
@@ -203,7 +203,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>10</pointsize>
                </font>
               </property>
               <item>
@@ -228,7 +228,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>9</pointsize>
                </font>
               </property>
               <property name="cursor">
@@ -244,7 +244,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>9</pointsize>
                </font>
               </property>
               <property name="cursor">
@@ -274,7 +274,7 @@
            </font>
           </property>
           <property name="title">
-           <string>MEP searching</string>
+           <string>   MEP searching</string>
           </property>
           <property name="flat">
            <bool>false</bool>
@@ -297,7 +297,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>10</pointsize>
                </font>
               </property>
               <property name="text">
@@ -323,7 +323,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>10</pointsize>
                </font>
               </property>
               <property name="text">
@@ -336,7 +336,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>10</pointsize>
                </font>
               </property>
               <property name="text">
@@ -358,7 +358,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>10</pointsize>
                 <kerning>false</kerning>
                </font>
               </property>
@@ -375,7 +375,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>9</pointsize>
                </font>
               </property>
               <property name="cursor">
@@ -391,7 +391,7 @@
               <property name="font">
                <font>
                 <family>Times New Roman</family>
-                <pointsize>8</pointsize>
+                <pointsize>9</pointsize>
                </font>
               </property>
               <property name="cursor">
@@ -593,6 +593,16 @@ text-decoration: underline;</string>
      <inactive/>
      <disabled/>
     </palette>
+   </property>
+   <property name="font">
+    <font>
+     <family>Times New Roman</family>
+     <pointsize>9</pointsize>
+     <weight>50</weight>
+     <italic>false</italic>
+     <bold>false</bold>
+     <underline>true</underline>
+    </font>
    </property>
    <property name="cursor">
     <cursorShape>PointingHandCursor</cursorShape>
